# TransMatrix

./: Catalogo-Edificio-Luz_es_to_en.json  Catalogo-Edificio-Luz_extracted.json  README.md  pyproject.toml
scripts/: extract_demo.py  translate_demo.py
transmatrix/extraction/: pdf_extractor.py  table_extractor.py
transmatrix/models/: document.py
transmatrix/reconstruction/: __init__.py  pdf_rebuilder.py
transmatrix/translation/: __init__.py  document_translator.py  translator.py
