[project]
name = "transmatrix"
version = "0.1.0"
description = "Motor de traducción de PDFs de alta fidelidad con preservación de layout"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"